Bg images, base styles, and started header

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,90 @@
+/* Box Model Hack */
+*, *:before, *:after { 
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+/* Clear fix hack */
+.clearfix:after {
+    content: ".";
+    display: block;
+    clear: both;
+    visibility: hidden;
+    line-height: 0;
+    height: 0;
+}
+
+.clear {
+    clear: both;
+}
+
+* {
+    outline: 1px red solid;
+}
+/******************************************
+/* BASE STYLES
+/*******************************************/
+html {
+    font-size: 62.5%;
+}
+
+body {
+    font-size: 1.6rem;
+}
+
+h1, h2, h3, /*div>:last-child*/ main div > a , #testimonials div > span:first-of-type {
+    font-family: 'Fraunces', serif;
+}
+p, #testimonials div > span, footer {
+    font-family: 'Barlow', sans-serif;
+}
+p {
+    color: hsl(210, 4%, 67%)
+}
+header > h2 {
+    font: 600 3rem 'Barlow', sans-serif;
+}
+ul {
+    list-style-type: none;
+}
+a {
+    text-decoration: none;
+    color: inherit;
+}
+
+/**Header*/
+header {
+    height: 100vh;
+    background-size: contain;
+    background-image: url("/images/mobile/image-header.jpg");
+    background-repeat: no-repeat;
+    background-origin: border-box;
+    background-position: top center;
+    justify-content: center;
+    color: white;
+    display: flex;
+}
+header:not(h1) {
+    display: flex;
+}
+
+header {
+    clear: both;
+}
 
 
+
+
+/******************************************
+/* LAYOUT
+/*******************************************/
+
+
+/******************************************
+/* ADDITIONAL STYLES
+/*******************************************/
+/**Hamburger mobile menu*/
 /* [ON SMALL SCREENS] */
 /* (A) BREAK INTO VERTICAL MENU */
 #hamitems a {
@@ -10,18 +95,24 @@
 }
 
 /* (B) SHOW HAMBURGER ICON */
-#hamnav label { 
+#hamNav label { 
     display: inline-block; 
     color: white;
-    background: #a02620;
     font-style: normal;
     font-size: 1.2em;
     padding: 10px;
 }
 
 /* (C) TOGGLE SHOW/HIDE MENU */
-#hamitems { display: none; }
-#hamnav input:checked ~ #hamitems { display: block; }
+#hamitems { 
+    display: none; 
+}
+#hamNav input:checked ~ #hamitems { 
+    display: block; 
+}
+#hamburger {
+    display: none;
+}
 
 
 
@@ -37,10 +128,9 @@
     }
 
     /* (B) SHOW HAMBURGER ICON */
-    #hamnav label { 
+    #hamNav label { 
         display: inline-block; 
         color: white;
-        background: #a02620;
         font-style: normal;
         font-size: 1.2em;
         padding: 10px;
@@ -48,6 +138,6 @@
 
     /* (C) TOGGLE SHOW/HIDE MENU */
     #hamitems { display: none; }
-    #hamnav input:checked ~ #hamitems { display: block; }
+    #hamNav input:checked ~ #hamitems { display: block; }
   
 }
